--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,8 @@ main = "src/index.js"
 workers_dev = true
 compatibility_date = "2023-10-01"
 
-kv_namespaces = [
-   { binding = "DATABASE", id = "706f2f8f4de24358b76c283f73fa2eca" }
-]
+
+[[kv_namespaces]]
+binding = "DATABASE"        
+id = "706f2f8f4de24358b76c283f73fa2eca"
+preview_id = "706f2f8f4de24358b76c283f73fa2eca"
